--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,27 @@
     height: 50px;
 }
 
+.statModifierText{
+    border: none;
+    text-align: center;
+    cursor: not-allowed;
+    outline: none;
+    resize: none;
+    width: 45px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "Comic Sans MS", cursive;
+}
+
+.geralAtributesText{
+    border: none;
+    border-bottom: 2px solid #000;
+    outline: none;
+    resize: none;
+    font-size: 13px;
+    padding: 4px;
+    margin-bottom: 0px;
+}
 
 .App-logo {
   height: 40vmin;
